# automator

./: .eslintrc  .gitignore  .prettierrc  README.md  index.html  package-lock.json  package.json  splashscreen.html  tailwind.config.js  tsconfig.json  vite.config.ts
.github/: dependabot.yml
.github/workflows/: publish.yml  webpack.yml
src/: app.vue  global.d.ts  main.ts  router.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/entity/: Cargo.toml
src-tauri/entity/src/: character.rs  characters.rs  connection.rs  edge.rs  focus.rs  lib.rs  mod.rs  node.rs  prelude.rs
src-tauri/icons/: icon.icns
src-tauri/migration/: Cargo.toml
src-tauri/migration/src/: lib.rs  main.rs  v1_create_char_table.rs  v1_create_connection_table.rs  v1_create_edge_table.rs  v1_create_focus_table.rs  v1_create_node_table.rs
src-tauri/service/: Cargo.toml
src-tauri/service/src/: mutation.rs  query.rs
src-tauri/service/tests/: mock.rs  prepare.rs
src-tauri/src/: main.rs
src/assets/: app.css  fonts.css  tailwind.css
src/components/: action-item.vue  advisor-checker.vue  character-editor.vue  combobox.vue  data-table.vue  designer.vue  disclosure.vue  drop-zone.vue  dropdown.vue  duplicate-table.vue  field-array.vue  file-add-modal.vue  file-select-modal.vue  folder-select-modal.vue  form-group.vue  header.vue  ideology-dropdown.vue  legacy-dropdown.vue  menu-dropdown.vue  modal.vue  navigation.vue  page.vue  pagination.vue  radio-group.vue  remove-character.vue  roles-field-array.vue  roles-viewer.vue  spinner-button.vue  spinner.vue  sprite-picker-modal.vue  switch-form.vue  switch.vue  tab-group.vue
src/components/analyze/: orphaned-tab.vue  remove-orphaned-modal.vue
src/components/analyze-table/: row.vue  table.vue
src/components/character-editor/: ideologies-field-array.vue  ideologies-field.array.vue  roles-field-array.vue  roles-trait-field-array.vue  traits-field-array.vue
src/components/character-table/: actions.vue  row.vue  table.vue
src/components/characters/: character-editor.vue  export-characters.vue  import-characters.vue  purge-characters.vue  remove-character.vue
src/components/file-entry/: row.vue  table.vue
src/components/main/: mod-directory.vue  shine-generation.vue  traits-source.vue
src/components/modal/: folder-select-modal.vue
src/components/national-focus/: designer.vue  dropzone-background.vue  nodes.vue  sidebar.vue
src/components/navigation/: locale-switcher.vue  settings.vue  theme-switch.vue  theme-switcher.vue
src/components/optimize/: duplicate-tab.vue  remove-orphaned-modal.vue
src/components/others/: analyze-gfx.vue  analyze-sprites.vue  character-localisation.vue  character-recruit.vue  event-logger.vue  (+5 more)
src/composables/: use-keys.ts  use-theme.ts
src/database/: character.ts  controller.ts  focus.ts  node.ts  repository.ts
src/locales/: ag.json  de.json  el.json  en.json  enderman.json  es.json  fr.json  index.ts  it.json  pirate.json  tl.json
src/pages/: characters.vue  focus.vue  info.vue  main.vue  others.vue  settings.vue
src/stores/: characters.ts  config.ts  definitions.ts  focuses.ts  import.ts  mod.ts  nodes.ts  settings.ts  theme.ts  traits.ts
(+27 files in other folders)
