[package]
name = "automator"
version = "1.1.0"
description = "Automator"
authors = ["dax0102", "Thanasis Lanaras"]
license = "AGPL-3.0-only"
repository = "https://github.com/Fuhrerredux/automator"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = [ "dialog-message", "updater", "path-all", "dialog-save", "fs-all", "dialog-open", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tokio = { version = "1.29.0", features = ["full"] }
anyhow = "1.0.71"
dotenvy = "0.15.7"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing = "0.1.40"
migration = { path = "./migration" }
service = { path = "./service" }
entity = { path = "./entity" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[workspace]
members = [".", "service", "entity", "migration"]
